gccida/c0/expand_mult
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2809:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_mult( machine_mode mode, rtx op0, rtx op1, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2813:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2814:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2815:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2816:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2817:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2818:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2819:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2829:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // [rsp+5Ch] [rbp-424h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2832:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // [rsp+7Ch] [rbp-404h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2835:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // [rsp+9Ch] [rbp-3E4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2838:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // [rsp+BCh] [rbp-3C4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2842:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // [rsp+DCh] [rbp-3A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2846:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // [rsp+FCh] [rbp-384h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2847:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // [rsp+10Ch] [rbp-374h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2856:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode nmode; // [rsp+17Ch] [rbp-304h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2866:13: error: expected expression
expand_mult::$15A4585A4BD47F0CBB7A268DC7D7DA95 variant; // [rsp+198h] [rbp-2E8h] 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2877:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+474h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/expmed.c:2885:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned __int16)*( _DWORD *)op1 != 55 || mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)op1a)] != MODE_INT ) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_mult/src/obj/expmed.o] Error 1
